chore: Update .gitignore to ignore battery_notes.storage, zigbee2mqtt/state.json, and other files

--- a/custom_templates/relative_time_plus.jinja
+++ b/custom_templates/relative_time_plus.jinja
@@ -119,7 +119,7 @@
       'hour': ['Stunde', 'Stunden', 'Std.'],
       'minute': ['Minute', 'Minuten', 'Min.'],
       'second': ['Sekunde', 'Sekunden', 'Sek.'],
-      'millisecond': ['Milliseconde', 'Milliseconden', 'ms'],
+      'millisecond': ['Millisekunde', 'Millisekunden', 'ms'],
       'combine': 'und',
       'error': 'Falsches Datum',
     }
@@ -212,6 +212,21 @@
       'millisecond': ['милисекунд', 'милисекунды', 'мс'],
       'combine': 'и',
       'error': 'Неверная дата',
+    }
+  },
+  {
+    'language': 'uk',
+    'phrases': {
+      'year': ['рік', 'років', 'р'],
+      'month': ['місяць', 'місяців', 'м'],
+      'week': ['тиждень', 'тижнів', 'тижд'],
+      'day': ['день', 'днів', 'дн'],
+      'hour': ['годину', 'годин', 'год'],
+      'minute': ['хвилину', 'хвилин', 'хв'],
+      'second': ['секунду', 'секунд', 'сек'],
+      'millisecond': ['мілісекунду', 'мілісекунд', 'мсек'],
+      'combine': 'та',
+      'error': 'Недійсна дата',
     }
   },
 ] -%}
