--- a/templates/README.j2
+++ b/templates/README.j2
@@ -1,38 +1,265 @@
-# Welcome !
+# 🏠 TBSmartHome - Home Assistant Configuration 🏠
 
-This is my Home Assistant installation.
+This is my [Home Assistant](https://www.home-assistant.io/) configuration - based on many of the other great configurations are out there (and listed below).  I live in ![Australia](http://flags.ox3.in/mini/au.png) so some of what you find here may not be relevent, or you may have access to better (and probably cheaper) ways.  It's very much a work-in-progress, but feel free to steal ideas or code to use for your own setup
 
-## Some statistics about my installation:
+_Please :star: this repo if you find it useful_
 
-Description | value
+| My Config | Contact Me |
+| :---: | :---: |
+| [![Home Assistant Version][ha-version-shield]][ha-version] | [![Home Assistant Community Forum][ha-community-shield]][ha-community] |
+| [![Github Action Status][github-build-status-shield]][github-build-status] | [![Twitter][social-twitter-shield]][social-twitter] |
+| [![Last Commit][github-last-commit]][github-master] | | ![Mastodon Follow](https://img.shields.io/mastodon/follow/000451950?domain=https%3A%2F%2Fmastodon.social) |
+| [![GitHub Activity][commits-shield]][commits] |  |
+| [![Github Stars][github-stars-shield]][github-stars] | |
+
+[![Buy me a coffee][buymeacoffee-shield]][buymeacoffee]
+
+---
+
+## Menu
+
+<!-- START doctoc generated TOC please keep comment here to allow auto update -->
+<!-- DON'T EDIT THIS SECTION, INSTEAD RE-RUN doctoc TO UPDATE -->
+<details>
+<summary>Details</summary>
+
+- [TL;DR](#tldr)
+- [Stats](#stats)
+- [Integrations Used](#integrations-used)
+- [Screenshots](#screenshots)
+- [Licence](#licence)
+
+</details>
+<!-- END doctoc generated TOC please keep comment here to allow auto update -->
+---
+
+## TL;DR
+
+This is my Home Assistant config - documentation isn't my strongest skill, so if you've got any questions, feel free to reach out via GitHub issues, the HA Forums or on Twitter (X) or Mastodon (my usernames there are the same as my github username)
+
+| [Menu](#menu) |
+
+---
+
+## Stats
+
+_Stats as at {{ states('sensor.date_time') }}, {{ states('sensor.date_long_format') }}_
+
+| Stat | Qty |
+| ---|--- |
+| HA Version | 2024.5.5 |
+| No. Integrations | {{states('sensor.integrations')}} |
+| No. Custom Integrations | {{states('sensor.custom_integrations')}} |
+| No. Entities | {{states('sensor.entities') }} |
+| No. Sensors | {{states('sensor.sensors') }} |
+| No. Automations | {{states('sensor.automations') }} |
+
+<details>
+<summary>Expand Entity Breakdown</summary>
+
+Type | Qty
 -- | --
-Number of entities | {{states | count}}
-Number of sensors | {{states.sensor | count}}
+{{states.sensor.air_quality.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.air_quality')}}
+{{states.sensor.alarm_control_panels.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.alarm_control_panels')}}
+{{states.sensor.areas.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.areas')}}
+{{states.sensor.binary_sensors.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.binary_sensors')}}
+{{states.sensor.buttons.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.buttons')}}
+{{states.sensor.calendars.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.calendars')}}
+{{states.sensor.cameras.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.cameras')}}
+{{states.sensor.climate.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.climate')}}
+{{states.sensor.covers.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.covers')}}
+{{states.sensor.dates.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.dates')}}
+{{states.sensor.datetimes.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.datetimes')}}
+{{states.sensor.device_trackers.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.device_trackers')}}
+{{states.sensor.devices.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.devices')}}
+{{states.sensor.fans.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.fans')}}
+{{states.sensor.humidifiers.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.humidifiers')}}
+{{states.sensor.images.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.images')}}
+{{states.sensor.input_booleans.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_booleans')}}
+{{states.sensor.input_buttons.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_buttons')}}
+{{states.sensor.input_datetimes.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_datetimes')}}
+{{states.sensor.input_numbers.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_numbers')}}
+{{states.sensor.input_selects.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_selects')}}
+{{states.sensor.input_texts.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.input_texts')}}
+{{states.sensor.lights.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.lights')}}
+{{states.sensor.locks.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.locks')}}
+{{states.sensor.media_players.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.media_players')}}
+{{states.sensor.numbers.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.numbers')}}
+{{states.sensor.persistent_notifications.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.persistent_notifications')}}
+{{states.sensor.persons.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.persons')}}
+{{states.sensor.remotes.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.remotes')}}
+{{states.sensor.scenes.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.scenes')}}
+{{states.sensor.scripts.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.scripts')}}
+{{states.sensor.selects.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.selects')}}
+{{states.sensor.sensors.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.sensors')}}
+{{states.sensor.sirens.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.sirens')}}
+{{states.sensor.stt.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.stt')}}
+{{states.sensor.suns.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.suns')}}
+{{states.sensor.switches.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.switches')}}
+{{states.sensor.texts.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.texts')}}
+{{states.sensor.times.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.times')}}
+{{states.sensor.tts.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.tts')}}
+{{states.sensor.update.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.update')}}
+{{states.sensor.vacuums.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.vacuums')}}
+{{states.sensor.water_heaters.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.water_heaters')}}
+{{states.sensor.weather.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.weather')}}
+{{states.sensor.zones.attributes.friendly_name|replace('Home Assistant ','')}} | {{states('sensor.zones')}}
+</details>
 
+| [Menu](#menu) |
 
-## My installed extensions:
+---
 
-### Add-ons
+## Integrations Used
+
+Here is a list of all the integrations I use, including any Custom Components (which are also listed below)
+
+{% set a = states.sensor.hass_main_config.attributes.components %}
+<details><summary>{{a | count}} Integrations</summary>
+
+| Name |
+| --- |
+{%- for integration in a|sort %}
+| [{{integration}}](https://www.home-assistant.io/components/{{integration}}) | {%- endfor %}
+</details>
+{%- if custom_components -%}
+  {%- set custom_integrations = hacs_components | selectattr('category', '==', 'integration') | sort(attribute='name') %}
+  {%- set plugins = hacs_components | selectattr('category', '==', 'plugin') | rejectattr('installed', '==', false) | sort(attribute='name') %}
+  {%- set themes = hacs_components | selectattr('category', '==', 'theme') | sort(attribute='name') %}
+
+<details><summary>{{ custom_integrations | count }} Custom Integrations</summary>
+
+| Name | Version | Description | Authors |
+| --- | --- | --- | --- |
+{%- for integration in custom_integrations -%}
+  {%- set url = integration.documentation if integration.documentation != none -%}
+  {%- set name = integration.name | replace('HACS', 'Home Assistant Community Store (HACS)') -%}
+  {%- set description = integration.description -%}
+  {%- set authors = integration.authors -%}
+  {%- set codeowners = integration | selectattr('name', '==', integration.name) | map(attribute='codeowners') | join -%}
+  {%- set version = '' -%}
+  {%- if integration.last_version not in ['', none] -%}
+    {%- set version = ' [v' ~ integration.last_version | replace('v', '') ~ ']' -%}
+  {%- endif %}
+| [{{ name | trim }}]({{ url | trim }}) | {{ version }} | {{ description | trim if description not in ['', none] }} | {%- if authors | count > 0 %}{% for author in authors -%}[{{ author }}](https://github.com/{{ author | replace('@', '') }}){{ ', ' if not loop.last }}{%- endfor %}.{%- endif -%} |
+{%- endfor %}
+</details>
+
+<details><summary>{{ plugins | count }} Lovelace Plugins</summary>
+
+| Name | Version | Description |
+| --- | --- | --- |
+{%- if plugins | count > 0 -%}
+{%- for plugin in plugins -%}
+  {%- set name = plugin.name | trim %}
+  {%- set version = '' -%}
+  {%- if plugin.installed_version not in ['', none] -%}
+    {%- set version = ' [v' ~ plugin.installed_version | replace('v', '') ~ ']' -%}
+  {%- endif %}
+| [{{ name }}]({{ plugin.documentation | trim }}) | {{ version }} | {{ plugin.description | trim if plugin.description not in ['', none] }} |
+{%- endfor %}
+</details>
+
+{%- endif -%}
+
+<details><summary>{{ themes | count }} Themes</summary>
+
+| Name | Version | Description |
+| --- | --- | --- |
+{%- if themes | count > 0 -%}
+{%- for theme in themes -%}
+  {%- set name = theme.name | trim %}
+  {%- set version = '' -%}
+  {%- if theme.installed_version not in ['', none] -%}
+    {%- set version = ' [v' ~ theme.installed_version | replace('v', '') ~ ']' -%}
+  {%- endif %}
+| [{{ name }}]({{ theme.documentation | trim }}) | {{ version }} | {{ theme.description | trim if theme.description not in ['', none] }} |
+{%- endfor %}
+</details>
+
+{%- endif -%}
+{%- endif %}
+
+<details><summary>{{ addons | count }} Addons via HA Operating System</summary>
+
+| Name | Version | Description | Repository |
+| --- | --- | --- | --- |
 {%- for addon in addons | sort(attribute='name') %}
-- {{addon.name}}
+| {{addon.name}} | {{addon.version}} | {{addon.description}} | {{addon.repository }} |
 {%- endfor %}
-
-### Custom integrations
-{%- for component in hacs_components | selectattr('category', 'equalto', 'integration') | sort(attribute='name') %}
-- [{{component.name}}]({{component.documentation}})
-{%- endfor %}
-
-### Lovelace plugins
-{%- for component in hacs_components | selectattr('category', 'equalto', 'plugin') | sort(attribute='name') %}
-- [{{component.name}}]({{component.documentation}})
-{%- endfor %}
-
-### Themes
-{%- for component in hacs_components | selectattr('category', 'equalto', 'theme') | sort(attribute='name') %}
-- [{{component.name}}]({{component.documentation}})
-{%- endfor %}
+</details>
 
 
-***
+| [Menu](#menu) |
+
+---
+
+## Screenshots
+
+![Screenshot - Home](./.assets/home.png?raw=True){: width="30%"}
+![Screenshot - Devices](./.assets/devices.png?raw=True){: width="30%"}
+![Screenshot - Home Assistant](./.assets/homeassistant.png?raw=True){: width="30%"}
+![Screenshot - Sports](./.assets/sports.png?raw=True){: width="30%"}
+![Screenshot - Solar](./.assets/solar.png?raw=True){: width="30%"}
+![Screenshot - Untappd](./.assets/untappd.png?raw=True){: width="30%"}
+![Screenshot - Weather](./.assets/weather.png?raw=True){: width="30%"}
+
+| [Menu](#menu) |
+
+---
+
+## Licence
+
+This is free and unencumbered software released into the public domain.
+
+Anyone is free to copy, modify, publish, use, compile, sell, or distribute this software, either in source code form or as a compiled binary, for any purpose, commercial or non-commercial, and by any means.
+
+In jurisdictions that recognize copyright laws, the author or authors of this software dedicate any and all copyright interest in the software to the public domain. We make this dedication for the benefit of the public at large and to the detriment of our heirs and successors. We intend this dedication to be an overt act of relinquishment in perpetuity of all present and future rights to this software under copyright law.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+
+For more information, please refer to [https://unlicense.org](https://unlicense.org)
+
+| [Menu](#menu) |
+
+---
 
 Generated by the [custom readme integration](https://github.com/custom-components/readme)
+
+[buymeacoffee-shield]: https://www.buymeacoffee.com/assets/img/guidelines/download-assets-sm-2.svg
+[buymeacoffee]: https://www.buymeacoffee.com/bacco007
+
+[home-assistant]: https://home-assistant.io
+
+[ha-version]: https://www.home-assistant.io/blog/categories/release-notes/
+[ha-version-shield]: https://img.shields.io/badge/{{ states.update.home_assistant_core_update.attributes.installed_version }}-555555?style=flat-square&logo=home-assistant
+
+[github-build-status-shield]: https://img.shields.io/github/actions/workflow/status/bacco007/HomeAssistantConfig/home-assistant.yaml?branch=master&style=flat-square&logo=github-actions&logoColor=838B95
+[github-build-status]: https://github.com/bacco007/HomeAssistantConfig/actions/workflows/home-assistant.yaml
+
+[github-last-commit]: https://img.shields.io/github/last-commit/bacco007/HomeAssistantConfig/master?style=flat-square&logo=github&logoColor=838B95
+[github-master]: https://github.com/bacco007/HomeAssistantConfig/commits/master
+
+[commits-shield]: https://img.shields.io/github/commit-activity/m/bacco007/HomeAssistantConfig/master?style=flat-square&logo=github&logoColor=838B95
+[commits]: https://github.com/bacco007/HomeAssistantConfig/commits/master
+
+[forum-shield]: https://img.shields.io/discourse/topics?style=flat-square&label=community&logo=discourse&color=46B4ED&logoColor=46B4ED&server=https%3A%2F%2Fcommunity.home-assistant.io
+[forum]: https://community.home-assistant.io
+
+[discord-shield]: https://img.shields.io/discord/330944238910963714?style=flat-square&color=7289da&label=discord&logo=discord
+[discord]: https://discord.gg/c5DvZ4e
+
+[automations]: https://github.com/bacco007/HomeAssistantConfig/blob/master/automations.yaml
+[integrations]: https://github.com/bacco007/HomeAssistantConfig/tree/master/integrations
+
+[github-stars-shield]: https://img.shields.io/github/stars/bacco007/HomeAssistantConfig.svg?style=plasticr
+[github-stars]: https://github.com/bacco007/HomeAssistantConfig/stargazers
+
+[licence-shield]: https://img.shields.io/badge/license-Unlicense-blue.svg?style=flat-square
+
+[social-twitter-shield]: https://img.shields.io/twitter/follow/bacco007?style=social
+[social-twitter]: https://www.x.com/bacco007
+[social-mastodon-shield]: https://img.shields.io/mastodon/follow/000451950?domain=https%3A%2F%2Fmastodon.social
+[social-mastodon]: https://mastodon.social/bacco007
+[ha-community-shield]: https://img.shields.io/badge/HA%20community-forum-orange
+[ha-community]: https://community.home-assistant.io/u/bacco007/summary
